# tsdq-dataview-opentes

./: Home.py  README.md  comparador.py  config_circuito.json  demo_1.py  demo_cigree.py  layout_2.py  layout_basico.py  layout_drp_drc.py  main.py  mapeamento.json  pyproject.toml  requirements.txt  results_1.h5
.streamlit/: config.toml
Exemplos/: Equivalente_EMout.txt  Equivalente_Mon_potenciacargad_1.csv  Equivalente_Mon_potenciasub_1.csv  Equivalente_Mon_tensaocargad_1.csv  Equivalente_Mon_tensaosub_1.csv
Exemplos/Daily/: Equivalente_Mon_potenciacargac_1.csv  Equivalente_Mon_potenciasubbaixa_1.csv  Equivalente_Mon_tensaocargac_1.csv  Equivalente_Mon_tensaosubbaixa_1.csv
Exemplos/Daily 1440/: daily1440.py
Exemplos/Daily Harmonic/: Equivalente_Mon_potenciacargad_1.csv  Equivalente_Mon_potenciasub_1.csv  Equivalente_Mon_tensaocargad_1.csv  Equivalente_Mon_tensaosub_1.csv  dailyharmonic.py
components/: graficos.py  tabelas.py  uploader.py
configs/: mapeamento.json
dataset_des1/: results-demo1.csv  results.csv
pages/: 1_Analise_Eletrica.py
utils/: escalas.py  leitura.py  mapeamento.py  processamento.py  prodist.py
